--- a/generic.html
+++ b/generic.html
@@ -23,6 +23,7 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<img src="/Documentos Site/UNBEWUSSTE.png" class="img-fluid" alt="header SU">
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
