Criação das paginas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Editorial by HTML5 UP</title>
+	<title>UNBEWUSSTE - Home</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,8 @@
 			<div class="inner">
 				<!-- Header -->
 				<header id="header">
-					<img src="images/UNBEWUSSTE.png" style="display: block;max-width: 15%;height: auto;align-items: center;">
+					<img src="images/UNBEWUSSTE.png"
+						style="display: block;max-width: 15%;height: auto;align-items: center;">
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -37,7 +38,7 @@
 					<div class="content">
 						<header>
 							<h3 style="color:#987F42;">UNBEWUSSTE<br />
-								EXCELÊNCIA EM SAUDE MENTAL</h1>
+								EXCELÊNCIA EM SAUDE MENTAL</h3>
 						</header>
 						<div id="box-toggle">
 							<b>UNBEWUSSTE</b> – é uma clínica que oferece atendimento psicanalítico lacaniano. Para tal,
@@ -59,6 +60,27 @@
 								</p>
 							</div>
 						</div>
+					</div>
+					<span class="image object">
+						<img src="images/pic10.jpg" alt="" />
+					</span>
+				</section>
+				<!-- Banner -->
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h3 style="color:#987F42;">REDE DE ATENDIMENTO <br />
+								PSICANALÍTICO UNBEWUSSTE</h3>
+						</header>
+						<p>
+							A primeira Rede de atendimento Unbewusste oferece atendimento psicanalítico individual
+							semanal, é direcionada para pessoas que têm empresas, que trabalham em empresas ou querem
+							montar sua empresa.
+							Outras Redes serão montadas de acordo com a procura. Atendemos crianças, adolescentes,
+							adultos, terceira idade. À medida que esta procura for excedendo, vamos aumentando o número
+							de Redes UNBEWUSSTE borromeana.
+
+						</p>
 						<ul class="actions">
 							<li><a class="button big" id="btnLeia">Learn More</a></li>
 						</ul>
@@ -67,48 +89,28 @@
 						<img src="images/pic10.jpg" alt="" />
 					</span>
 				</section>
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h3 style="color:#987F42;">Além de atendimento clínico, <br />
+								a Rede Unbewusste pode: </h3>
+						</header>
+						<p>
+							Contribuir com aulas, debates, discussões e palestras.
+							Deixar a psicanálise francesa de Jacques Lacan mais
+							acessível à sociedade. Trabalhar para que cada sujeito
+							deixe os “narcisismos das pequenas diferenças.” (Freud)
+							e invista em projetos comuns de forma singular.
 
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Erat lacinia</h2>
-					</header>
-					<div class="features">
-						<article>
-							<span class="icon fa-gem"></span>
-							<div class="content">
-								<h3>Portitor ullamcorper</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon solid fa-paper-plane"></span>
-							<div class="content">
-								<h3>Sapien veroeros</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon solid fa-rocket"></span>
-							<div class="content">
-								<h3>Quam lorem ipsum</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
-						<article>
-							<span class="icon solid fa-signal"></span>
-							<div class="content">
-								<h3>Sed magna finibus</h3>
-								<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam
-									facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-							</div>
-						</article>
+						</p>
+						<ul class="actions">
+							<li><a class="button big" id="btnLeia">Learn More</a></li>
+						</ul>
 					</div>
+					<span class="image object">
+						<img src="images/pic10.jpg" alt="" />
+					</span>
 				</section>
-
 				<!-- Section -->
 				<section>
 					<header class="major">
@@ -193,54 +195,27 @@
 					</header>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Quem Somos</a></li>
-						<li><a href="elements.html">Rede de Atendimento</a></li>
-						<li><a href="#">Empresas Parceiras</a></li>
-						<li><a href="#">Psicanálise na Empresa</a></li>
-						<li><a href="#">Para futuros empresarios</a></li>
-						<li><a href="#">Para empresários</a></li>
-						<li><a href="#">Espaço de estudo</a></li>
-						<li><a href="#">Linha de atendimento: clínica do Real</a></li>
-						<li><a href="#">Psicanalista parceiro</a></li>
-						<li><a href="#">Painel Cultural</a></li>
-						<li><a href="#">Biblioteca</a></li>
-						<li><a href="#">Trabalhe em parceria conosco</a></li>
-						<li><a href="#"></a>Inscreva-se para ser atendido</a></li>
+						<li><a href="quemSomos.html">Quem Somos</a></li>
+						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
+						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
+						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
+						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+						<li><a href="paraEmpresario.html">Para empresários</a></li>
+						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
+						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
+						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
+						<li><a href="painelCultural.html">Painel Cultural</a></li>
+						<li><a href="biblioteca.html">Biblioteca</a></li>
+						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
+						<li><a href="atendimento.html"></a>Inscreva-se para ser atendido</a></li>
 					</ul>
 				</nav>
 
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Ante interdum</h2>
+						<h2>Contato</h2>
 					</header>
-					<div class="mini-posts">
-						<article>
-							<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
-					</div>
-					<ul class="actions">
-						<li><a href="#" class="button">More</a></li>
-					</ul>
-				</section>
-
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Get in touch</h2>
-					</header>
-					<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem
-						ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-						tempus aliquam.</p>
 					<ul class="contact">
 						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
 						<li class="icon solid fa-phone">(000) 000-0000</li>
@@ -251,9 +226,7 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
-							href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5
-							UP</a>.</p>
+					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
 				</footer>
 
 			</div>
